# sbenv

./: .gitignore  README.md  clippy.sh  coverage.sh  install.sh  sbenv  test.sh
.github/workflows/: ci.yml  coverage.yml  release-only-test.yml  release.yml
cli/: Cargo.toml  Cross.toml  README.md
cli/src/: main.rs
