[package]
name = "sbenv"
version = "0.1.0"
edition = "2021"
authors = ["Madhava Jay <madhava@openmined.org>"]
description = "SyftBox Env - virtualenv for SyftBox"
license = "MIT OR Apache-2.0"
repository = "https://github.com/openmined/sbenv"
homepage = "https://github.com/openmined/sbenv"
readme = "README.md"
keywords = ["syftbox", "virtualenv", "environment", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "sbenv"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
rand = "0.8"
colored = "2.1"
dialoguer = "0.11"
atty = "0.2"